feat: integrate v2 protos && support resource creation
